@@ -1,5 +1,10 @@
 2006-08-17  Per Bothner  <per@bothner.com>
 
+	* XQParser.java (parseItemType): The sementics of empty-sequence()
+	don't really match those of Type.void_type.
+
+	* XQParser.java (parseItemType): Emit error if unknown type.
+
 	* XQParser.java (parseFLWRExpression): Also reset flworDeclsCount
 	when done.
 
